# POC

backend/: .gitignore  pyproject.toml  test.py
backend/poc_project/: manage.py
backend/poc_project/chatbot/: urls.py  views.py
backend/poc_project/poc_project/: asgi.py  settings.py  urls.py  wsgi.py
frontend/chatbot/: .gitignore  package-lock.json  package.json  vite.config.js
frontend/chatbot/src/: App.css  App.jsx  api.js
